--- a/.env_production
+++ b/.env_production
@@ -1,5 +1,5 @@
 APP_NAME=LeiloArte
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:xWdLc4KY3iJKHCupluHuu1nDwvprk4OAqnsc6RRrGsA=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
