--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "beyondcode/laravel-websockets": "^1.14",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^3.0",
         "laravel/framework": "^9.0",
