Fix merge conflicts

--- a/.env
+++ b/.env
@@ -25,3 +25,12 @@ PUSHER_APP_KEY="22cedf2fe1fdf779adc9"
 PUSHER_APP_SECRET="24ad219a2d353e67f544"
 PUSHER_APP_CLUSTER="eu"
 
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=1cab4c3d0a2464
+MAIL_PASSWORD=be67380dcd5723
+MAIL_ENCRYPTION=tls
+
+MAIL_FROM_ADDRESS=leiloarte@lbaw.com
+MAIL_FROM_NAME=LeiloArte
