--- a/.env_production
+++ b/.env_production
@@ -20,3 +20,13 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
+
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=1cab4c3d0a2464
+MAIL_PASSWORD=be67380dcd5723
+MAIL_ENCRYPTION=tls
+
+MAIL_FROM_ADDRESS=leiloarte@lbaw.com
+MAIL_FROM_NAME=LeiloArte
