--- a/.env_production
+++ b/.env_production
@@ -15,11 +15,16 @@ DB_DATABASE=lbaw23113
 DB_USERNAME=lbaw23113
 DB_PASSWORD=uoubWBPx
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
+
+PUSHER_APP_ID="1719870"
+PUSHER_APP_KEY="22cedf2fe1fdf779adc9"
+PUSHER_APP_SECRET="24ad219a2d353e67f544"
+PUSHER_APP_CLUSTER="eu"
 
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
